# funnel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/include/: funnel_base.hpp
src/include/funnel/: funnel_base.hpp
tests/: CMakeLists.txt  funnel_base_test.cpp  test_lib.hpp  test_main.cpp
tests/funnel_test_lib/: funnel_test_lib.hpp
